[gd_scene load_steps=7 format=3 uid="uid://d2fflt0dmlqmk"]

[ext_resource type="Script" uid="uid://dm4tk202tw7ex" path="res://src/scripts/boostspot.gd" id="1_wftyx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lkie2"]
height = 2.69898
radius = 1.79785

[sub_resource type="CylinderMesh" id="CylinderMesh_wftyx"]
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wftyx"]
shading_mode = 0
albedo_color = Color(0.791999, 0.791999, 0.791999, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ga4yo"]
material = SubResource("StandardMaterial3D_wftyx")

[sub_resource type="Curve" id="Curve_ea5tw"]
_data = [Vector2(0.0209677, 0.345792), 0.0, 0.0, 0, 0, Vector2(0.308065, 0.349617), -4.3127, -4.3127, 0, 0, Vector2(0.687097, 0.517952), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[node name="boostspot" type="Node3D"]
script = ExtResource("1_wftyx")

[node name="boostarea" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="boostarea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46009, 0)
shape = SubResource("CylinderShape3D_lkie2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_wftyx")

[node name="particles" type="CPUParticles3D" parent="."]
amount = 16
lifetime = 0.7
mesh = SubResource("SphereMesh_ga4yo")
emission_shape = 1
emission_sphere_radius = 1.0
spread = 82.57
gravity = Vector3(0, 9, 0)
angular_velocity_min = -26.92
angular_velocity_max = 36.4
linear_accel_min = 7.48
linear_accel_max = 10.0
scale_amount_min = 0.1
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_ea5tw")

[node name="onoff" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="boostarea" to="." method="_on_boostarea_body_entered"]
[connection signal="body_exited" from="boostarea" to="." method="_on_boostarea_body_exited"]
[connection signal="timeout" from="onoff" to="." method="_on_onoff_timeout"]
